# uog

./: .gitignore  Cargo.toml  Cross.toml  README.md  build.rs  build_kotlin.sh  ping_monitor.sh
.github/workflows/: rust.yml
proto/: udp.proto
src/: client.rs  constants.rs  lib.rs  main.rs  pb.rs  server.rs  uog.udl  util.rs
