[package]
name = "uog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive","cargo"] }
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

tonic = "0.12.3"
prost = "0.13.3"
h2 = "0.4.6"
tokio-stream = "0.1.16"

[build-dependencies]
tonic-build = "0.12.3"