[package]
name = "uog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[lib]
#name = "uog"
#crate-type = ["cdylib"]
#path = "src/lib.rs"
#
#[[bin]]
#name = "uog"
#path = "src/main.rs"

[[bin]]
name = "uniffi"
path = "uniffi.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
log = "0.4.20"
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "cargo"] }
env_logger = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

tonic = { version = "0.12.3", features = ["tls", "tls-native-roots"] }
prost = "0.13.3"
h2 = "0.4.6"
tokio-stream = "0.1.16"

uniffi = { version = "0.23.0", features = ["cli"] }
rustls-platform-verifier = "0.3"
tower = "0.4.13"
hyper-util = "0.1.9"
hyper-rustls = { version = "0.27.3", features = ["http2"] }
rustls = "0.23.11"
aws-lc-rs = { version = "1.10.0", features = ["bindgen"] }

[build-dependencies]
tonic-build = "0.12.3"
uniffi = { version = "0.23.0", features = ["build"] }